@@ -4688,9 +4688,7 @@ void menu_filesel_overlay_render_preview_in_memory(void)
 //Overlay para mostrar los previews
 void menu_filesel_overlay(void)
 {
-	if (!zxvision_drawing_in_background) normal_overlay_texto_menu();
-
-
+	
 	//Y el procesado de nueva preview no tan seguido
 	//esto hara ejecutar esto 5 veces por segundo
 	if ( ((contador_segundo%200) == 0 && menu_filesel_overlay_valor_contador_segundo_anterior!=contador_segundo) || menu_multitarea==0) {
